submissions/60.error
  File "tmp.py", line 65
    return x,y,i,j	if __name__ == '__main__' :
                                             ^
SyntaxError: invalid syntax
